// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`troubleshoot - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy, evaluate, and manage Foundry agents end-to-end: Docker build, ACR push, hosted/prompt agent create, container start, batch eval, prompt optimization, agent.yaml, dataset curation from traces. WHEN: deploy agent to Foundry, hosted agent, create agent, invoke agent, evaluate agent, run batch eval, optimize prompt, deploy model, Foundry project, RBAC, role assignment, permissions, quota, capacity, region, troubleshoot agent, deployment failure, create dataset from traces, dataset versioning, eval trending, create AI Services, Cognitive Services, create Foundry resource, provision resource, knowledge index, agent monitoring, customize deployment, onboard, availability.",
  "extractedKeywords": [
    "agent",
    "agents",
    "ai",
    "assignment",
    "availability",
    "azure",
    "batch",
    "build",
    "capacity",
    "cli",
    "cognitive",
    "container",
    "create",
    "curation",
    "customize",
    "dataset",
    "deploy",
    "deployment",
    "docker",
    "end-to-end",
    "eval",
    "evaluate",
    "failure",
    "foundry",
    "from",
    "hosted",
    "index",
    "invoke",
    "knowledge",
    "manage",
    "mcp",
    "microsoft",
    "model",
    "monitoring",
    "onboard",
    "optimization",
    "optimize",
    "permissions",
    "project",
    "prompt",
    "provision",
    "push",
    "quota",
    "rbac",
    "region",
    "resource",
    "role",
    "services",
    "start",
    "traces",
    "trending",
    "troubleshoot",
    "validation",
    "versioning",
    "when",
    "yaml",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`troubleshoot - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "ai",
  "assignment",
  "availability",
  "azure",
  "batch",
  "build",
  "capacity",
  "cli",
  "cognitive",
  "container",
  "create",
  "curation",
  "customize",
  "dataset",
  "deploy",
  "deployment",
  "docker",
  "end-to-end",
  "eval",
  "evaluate",
  "failure",
  "foundry",
  "from",
  "hosted",
  "index",
  "invoke",
  "knowledge",
  "manage",
  "mcp",
  "microsoft",
  "model",
  "monitoring",
  "onboard",
  "optimization",
  "optimize",
  "permissions",
  "project",
  "prompt",
  "provision",
  "push",
  "quota",
  "rbac",
  "region",
  "resource",
  "role",
  "services",
  "start",
  "traces",
  "trending",
  "troubleshoot",
  "validation",
  "versioning",
  "when",
  "yaml",
]
`;
